--- a/index.html
+++ b/index.html
@@ -603,8 +603,11 @@
                     </a>
                 </div>
                 <div class="project-card">
+                    
+                    <a href="https://foodrescue.altervista.org" target="_blank" class="links">
                     <h3 data-it="Food rescue" data-en="Food rescue">Food rescue</h3>
                     <p data-it="Sito web ispirato da Too Good To Go." data-en="Website inspired by Too Good To Go.">Sito web ispirato da Too Good To Go.</p>
+                    </a>
                 </div>
             </div>
         </section>
