--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Antonio Lissa Lattanzio - Portfolio</title>
+    <title>Antonio Lissa Lattanzio - AI & Robotics Engineer Portfolio</title>
+    <meta name="description" content="Portfolio of Antonio Lissa Lattanzio, an AI & Robotics Engineering student. Showcasing projects in machine learning, robotics, and software development.">
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 
