--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Antonio Lissa Lattanzio - AI & Robotics Engineer Portfolio</title>
     <meta name="description" content="Portfolio of Antonio Lissa Lattanzio, an AI & Robotics Engineering student. Showcasing projects in machine learning, robotics, and software development.">
+    <meta name="google-site-verification" content="joAK-G6QL1siHpmBgsKltiQWh9-D2Mlm6CnCOz8h3CM" />
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
