--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 
         <div class="social-links">
            <a href="https://github.com/AntonLissa" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-           <a href="www.linkedin.com/in/antonio-lissa-lattanzio-4a5138332" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+           <a href="https://www.linkedin.com/in/antonio-lissa-lattanzio-4a5138332" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
         </div>
     </div>
 
